<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/iv_playlist"
        style="@style/iv_video_style"
        android:background="@drawable/bg_image"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iv_text"
        style="@style/txt_iv_playlist"
        android:text="@string/playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_playlist_title"
        style="@style/tv_style_main"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        tools:text="@string/tv_txt_example"
        app:layout_constraintStart_toEndOf="@+id/iv_playlist"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_playlist_qty"
        style="@style/tv_playlist_secondary_style"
        tools:text="@string/tv_video_quantity"
        app:layout_constraintStart_toEndOf="@+id/iv_playlist"
        app:layout_constraintTop_toBottomOf="@+id/tv_playlist_title" />

</androidx.constraintlayout.widget.ConstraintLayout>