<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.video.VideoActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Theme.YoutubeApi.PopupOverlay">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/iv_back_arrow"
                    android:layout_width="12dp"
                    android:layout_height="21dp"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_color_main"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_back_arrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist"
                    android:textColor="@color/btn_color_main"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/exoplayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/fjalla_one"
            tools:text="@string/txt_example_1_cl"
            android:textColor="@color/txt_color_main"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_layout" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="141dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_layout"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_video_title">

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/download"
                android:textColor="@color/btn_color_main"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_download"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_download"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_video_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/noto_sans"
            tools:text="@string/txt_example_2_cl"
            android:textColor="@color/txt_color_main"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>